<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/events"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/technofania"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/team"
            android:title="Team" />
        <item
            android:id="@+id/about"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/contact"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/app_bar_switch"
            android:title="Switch"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
    </group>

</menu>
