<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.osoc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/events"
        android:name="com.example.osoc.ui.events.EventsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/technofania"
        android:name="com.example.osoc.ui.technofania.TechnofaniaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_technofania" />

    <fragment
        android:id="@+id/team"
        android:name="com.example.osoc.ui.team.TeamFragment"
        android:label="Team"
        tools:layout="@layout/fragment_team" />

    <fragment
        android:id="@+id/contact"
        android:name="com.example.osoc.ui.contact.ContactFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/about"
        android:name="com.example.osoc.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />

</navigation>